--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,eclipse
 
 
-Project-SRservice/Train
+Project-SRservice/Train/
 
 
 
